# cs2-minneapolis-osm-toolkit

./: .gitignore  CHANGELOG.md  METHODOLOGY.md  README.es.md  README.md  cities.json  index.html
.claude/: launch.json
.github/ISSUE_TEMPLATE/: city-request.yml
.github/workflows/: test.yml
docs/: adapting-to-other-cities.md  reddit_posts.md
docs/plans/: 2026-05-15-modulo-vial.md  2026-05-16-modulo-servicios.md
docs/specs/: 2026-05-15-toolkit-reorg-design.md  2026-05-22-landing-redesign-design.md
src/: extract_vial.py  pyproject.toml
src/official_zoning/: pipeline.py
src/official_zoning/mappings/: new_york.yaml
src/official_zoning/sources/: __init__.py  minneapolis.py
src/services/: extract.py  zones.py
src/shared/: landing.py  pbf_cache.py  pbf_client.py  registry.py  thumbnails.py
src/transporte/: __init__.py  classifiers.py  extract.py  zones.py
src/vial/: extract.py  zones.py
src/zoning/: classifiers.py  extract.py  extract_google_buildings.py  zones.py
tests/: test_vial.py
tests-js/: README.md  smoke.test.js
tests-js/helpers/: mock-fetch.js
tests/official_zoning/: conftest.py  test_extract_cli.py  test_integration_minneapolis.py  test_integration_new_york.py  test_mapping_new_york.py  test_pipeline.py  test_source_minneapolis.py
tests/services/: test_extract.py  test_zones.py
tests/shared/: test_landing.py  test_pbf_cache.py  test_pbf_client.py  test_registry.py
tests/transporte/: test_classifiers.py  test_extract_cli.py  test_features.py  test_zones.py
tests/vial/: test_zones.py  (+1 more)
visualizer/: README.md  cities.json  index.html  map.html
(+15 files in other folders)
