[project]
name = "cs2-osm-toolkit"
version = "3.4.1"
description = "GIS toolkit modular: extract OpenStreetMap data for Cities: Skylines 2"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "shapely>=2.0.0",
    "s2sphere>=0.2.5",
    "osmium>=3.7.0",
    "geopandas>=0.14.0",
    "pyogrio>=0.7.0",
    "pyproj>=3.6.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
# Opt-in: pesado (~300 MB Chromium binary). Instalar con:
#   uv sync --group thumbnails
#   uv run --group thumbnails playwright install chromium
thumbnails = [
    "playwright>=1.40.0",
]

# Entry points por módulo
[project.scripts]
extract-zoning = "zoning.extract:main"
extract-vial   = "vial.extract:main"
extract-services = "services.extract:main"
extract-google-buildings = "zoning.extract_google_buildings:main"
extract-official-zoning = "official_zoning.extract:main"
generate-landing = "shared.landing:main"
generate-thumbnails = "shared.thumbnails:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Layout de sub-packages — hatchling empaqueta los directorios completos
[tool.hatch.build.targets.wheel]
packages = ["shared", "zoning", "vial", "services", "official_zoning", "transporte"]

# Note: pytest config (markers) lives in <repo_root>/pytest.ini because pytest's
# rootdir detection lands on the project root, not src/. Keeping pytest config
# co-located with rootdir avoids "unknown marker" warnings.
